# renderdoc-agent

renderdoc-agent/: .gitignore  README.md  pyproject.toml  report.csv  report.json  result.txt
renderdoc-agent/src/renderdoc_agent/: __init__.py  __main__.py  agent.py  config.py  llm.py  main.py  memory.py  renderdoc_helper.py  report.py
renderdoc-agent/src/renderdoc_agent/tools/: __init__.py  analyze_rdc.py  baselines.py  gpu_time_analysis.py  overdraw_analysis.py  rdc_replay.py  registry.py  renderdoc_extract.py  shader_analysis.py  texture_analysis.py
renderdoc-agent/tests/: test_analyze_rdc.py
